# notoanxiety

./: .env  .gitignore  Cargo.toml  README.md  database.db
eclipse_yy/: Cargo.toml
saynotoanxiety/: Cargo.toml
src/: auth.rs  constants.rs  create.rs  delete.rs  index.rs  jwt.rs  macros.rs  main.rs  model.rs  show.rs
static/: styles.css
templates/: create.html  index.html  login.html  show.html
