[package]
name = "Eclipse_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-session = { version = "0.9.0", features = ["redis-actor-session", "cookie-session"] }
actix-web = "4.5.1"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
minijinja = "2.0.1"
serde = { version = "1.0.200", features = ["derive"] }
sha256 = "1.5.0"
sqlite = "0.36.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
shuttle-actix-web = "0.44"
shuttle-runtime = "0.44"
